--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ EJS_pathtodata = 'https://burritoedition.github.io/emu/data/';
 
 <!-- footer / Scripts -->
 
-<footer>&#169 Zesty Edition</footer>
+<footer>&#169 Zesty Edition - Hover the window and click the fullscreen button! (You can change the display in the settings)</footer>
 
 <script src="../js/slide_show.js"></script>
 <script src="../particles.js-master/particles.js"></script>
