--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     EJS_player = '#game';
     EJS_gameUrl = 'https://cdn.glitch.global/3668fd7f-743f-44f4-b4a4-4afd1dcd55bf/Super%20Mario%20Bros.%20(World).nes?v=1691717357351'; // Url to Game rom
     EJS_core = 'nes';
+  EJS_gameID = 6; // ID in your website, required for netplay.
 EJS_pathtodata = 'https://burritoedition.github.io/emu/data/';
 </script>
 <script src="https://burritoedition.github.io/emu/data/loader.js"></script>
